# sos-page

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.debug.yml  docker-compose.yml
src/: counter.rs  main.rs  tests.rs
src/route/: mod.rs
src/routes/: blog.rs  discography.rs  index.rs  mod.rs  not_found.rs  statics.rs
static/css/: index.css  under_construction.css
templates/: base.html.tera  blog.tera  discography.tera  index.tera  root.tera
templates/error/: 404.html.tera
